--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2027,3 +2027,9 @@ input#searchinput {
 .nav-link-social:hover {
 	color: #ffffff;
 }
+
+a.disabled {
+	pointer-events: none; /* делаем ссылку некликабельной */
+	cursor: default;  /* устанавливаем курсор в виде стрелки */
+	color: #999; /* цвет текста для нективной ссылки */
+}
