--- a/public/css/style.css
+++ b/public/css/style.css
@@ -523,15 +523,14 @@ form[name="registration"] input[type="email"], form[name="registration"] textare
 	width: 100%;
 }
 
-#q_search input, .form-wrap input[type="text"], .form-wrap input[type="password"], #sendmail input, #sendmail textarea {
+#q_search input, #sendmail textarea {
 	background: #000000;
 	border-radius: .25rem;
 	width: 100%;
 	color: #0b2a41;
 }
 
-#q_search input:focus, .form-wrap input[type="text"]:focus, .form-wrap input[type="password"]:focus, form[name="registration"] input:focus,
-.pm input[type="text"]:focus, .pm textarea:focus {
+#q_search input:focus {
 	background-color: #0b2a41;
 	color: #ffffff;
 }
@@ -1558,9 +1557,9 @@ fieldset div select {
 	z-index: 10;
 }
 
-.up-group span {
+.up-group span, .up-first h1 span {
 	font-size: 12px;
-	color: #ffffff !important;
+	color: #ffffff;
 	font-weight: 700;
 }
 
@@ -1720,11 +1719,6 @@ img {
 	padding-top: 10px;
 }
 
-.form-item > input[type="text"], .form-item > input[type="password"], .form-item > input[type="file"] {
-	float: left;
-	max-width: 600px;
-}
-
 .form-checks label, #allow_subscribe + label {
 	display: inline-block;
 	line-height: 30px;
@@ -1737,40 +1731,17 @@ input, select {
 	vertical-align: middle !important;
 }
 
-.form-item > input[type="text"], .form-item > input[type="password"], .form-item > input[type="file"], .form-item > select[name="land"] {
-	float: left;
-	max-width: 600px;
-}
-
-.form-item > select[name="land"] {
-	background-color: #000000;
-	border-width: 2px;
-	border-style: inset;
-	border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-	border-image: initial;
-}
-
 .form-textarea > label {
 	display: block;
 	padding: 10px 20px;
 	background-color: #444444;
 	color: #ffffff;
 	font-size: 16px;
+	border-radius: .25rem;
 }
 
 .fieldtr select, .f_textarea, .f_input, .xfields textarea, .xprofile textarea, .tdfield select, .lfield input, .editor input[type="text"], #category, textarea.ui-corner-all, .pm select, .xfields input, .xprofile input, .xfields select, .xprofile select, .mass_comments_action select, .bbeditor select, .textin, select.rating {
 	padding: 5px;
-}
-
-textarea {
-	display: block;
-	width: 100%;
-	padding: 10px;
-	background-color: #f5f5f5;
-	border-radius: 0;
-	overflow: auto;
-	vertical-align: top;
-	resize: vertical;
 }
 
 .static {
