--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1631,16 +1631,22 @@ img {
 	background-color: #f6f6f6;
 	padding: 20px 30px 20px 150px;
 }
-.post-comments {
 
-}
 .post-comments li {
 	width: calc(100% / 3);
-	display: flex !important;
-	flex-direction: column;
+}
+
+.post-comments li, .comment-instrument div, .comment-instrument div a {
 	justify-content: center;
 	text-align: center;
 	font-weight: 700;
+}
+
+.post-comments li{
+	display: flex !important;
+}
+.comment-instrument div {
+	flex-direction: column;
 }
 
 .up-second li:first-child {
