Удален ошибочный тег в выводе комментариев

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1753,7 +1753,7 @@ input, select {
 	vertical-align: middle !important;
 }
 
-.form-textarea > label {
+.form-textarea > label, .tester >label {
 	display: block;
 	padding: 10px 20px;
 	background-color: #444444;
