--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -110,7 +110,7 @@ body {
 	}
 }
 
-.sidebar .nav-link {
+.sidebar .nav-link, .edit-table-dark input {
 	color: #fff !important;
 }
 
@@ -127,7 +127,7 @@ body {
 	color: green;
 }
 
-.fa-exclamation-circle {
+.fa-exclamation-circle, .fa-trash-alt {
 	color: red;
 }
 
