Добавлен UserComposer.php.php и добалены мелкие правки шаблона редактора

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -213,3 +213,8 @@ form .card {
 	border: none;
 	background-color: transparent !important;
 }
+
+#searchsuggestions .list-group .list-group-item a {
+	text-decoration: none;
+	color: #fff;
+}
