--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -117,6 +117,19 @@ th.id_row > ul, td.id_row > ul {
 	color: #333333;
 }
 
+.accordion-button-link {
+	font-weight: 500;
+	color: #ffffff !important;
+	text-decoration: none;
+	background-color: #202327;
+}
+
+.accordion-button:not(.collapsed) {
+	color: #0c63e4;
+	box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+	background-color: #212529 !important;
+}
+
 .sidebar .nav-link .feather {
 	margin-right: 4px;
 	color: #727272;
@@ -277,13 +290,17 @@ form .card {
 
 #searchsuggestions .list-group .list-group-item a {
 	text-decoration: none;
-	color: #fff;
+	color: #ffffff;
 }
 
 .form-control:disabled, .form-control[readonly] {
-	color: #000;
+	color: #000000;
 }
 
-.list-group-item {
+.list-group-item .accordion-body-nav {
 	padding: 0 !important;
+}
+
+.accordion-item-nav {
+	border: 0;
 }
