в админ контроллерах исправлен get, null, true добавлено где отсуствало. Базовый контроллер и базовая модель сделаны абстрактнымы. В ViewComposer добавлен ComposersAbstract.php и произведено наследование от него. В модуле кодик внесены исправления ошибки отсутствующий токен, теперь выдает сообщение. В админке подключена css datatables.css В DLEParseRepository.php url получает из доп имени, в функции парсинга картинки добавлена проверка наличия старых постеров и удаления их.

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -65,6 +65,7 @@ th.id_row {
 }
 
 th.id_row .list-group-item, td.id_row .list-group-item {
+	padding: 0;
 	background-color: transparent !important;
 	border: none;
 	color: #ffffff;
